[package]
name = "deno-bundler"
version = "0.6.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/deno-bundler"
repository = "https://github.com/tyrchen/deno-utils"
homepage = "https://github.com/tyrchen/deno-utils"
description = """
javascript/typescript bundler for deno.
"""
readme = "README.md"
keywords = ["bundler", "deno", "v8"]
categories = ["development-tools::build-utils"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11.1"
base64 = "0.13.0"
deno_ast = { version = "0.17.0", features = ["bundler"] }
deno_core = "0.147.0"
deno_graph = "0.30.0"
derive_builder = "0.11.2"
futures = "0.3.23"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
swc_ecma_minifier = "0.136.1"

deno-utils = { version = "0.7.0", path = "../utils", features = ["bundle", "transpile"] }


[dev-dependencies]
tokio = { version = "1.20.3", features = ["full"] }
tracing-subscriber = "0.3.15"
