[package]
name = "deno-snapshot"
version = "0.3.3"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/deno-snapshot"
repository = "https://github.com/tyrchen/deno-utils"
homepage = "https://github.com/tyrchen/deno-utils"
description = """
Generate snapshot for deno. Extracted some logic from main deno repo for better reusability.
"""
readme = "README.md"
keywords = ["snapshot", "deno", "v8"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.133.0"

anyhow = { version = "1.0.57", optional = true }
deno_broadcast_channel = { version = "0.45.0", optional = true }
deno_console = { version = "0.51.0", optional = true }
deno_crypto = { version = "0.65.0", optional = true }
deno_fetch = { version = "0.74.0", optional = true }
deno_ffi = { version = "0.38.0", optional = true }
deno_http = { version = "0.45.0", optional = true }
deno_net = { version = "0.43.0", optional = true }
deno_tls = { version = "0.38.0", optional = true }
deno_url = { version = "0.51.0", optional = true }
deno_web = { version = "0.82.0", optional = true }
deno_webgpu = { version = "0.52.0", optional = true }
deno_webidl = { version = "0.51.0", optional = true }
deno_websocket = { version = "0.56.0", optional = true }
deno_webstorage = { version = "0.46.0", optional = true }
glob = { version = "0.3.0", optional = true }
zstd = "0.11.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
winapi = "0.3.9"

[features]
build = ["anyhow", "deno_broadcast_channel", "deno_console", "deno_crypto", "deno_fetch", "deno_ffi", "deno_http", "deno_net", "deno_tls", "deno_url", "deno_web", "deno_webgpu", "deno_webidl", "deno_websocket", "deno_webstorage", "glob"]
