[package]
name = "deno-snapshot"
version = "0.5.4"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/deno-snapshot"
repository = "https://github.com/tyrchen/deno-utils"
homepage = "https://github.com/tyrchen/deno-utils"
description = """
Generate snapshot for deno. Extracted some logic from main deno repo for better reusability.
"""
readme = "README.md"
keywords = ["snapshot", "deno", "v8"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.142.0"

deno_broadcast_channel = { version = "0.54.0", optional = true }
deno_console = { version = "0.60.0", optional = true }
deno_crypto = { version = "0.74.0", optional = true }
deno_fetch = { version = "0.83.0", optional = true }
deno_ffi = { version = "0.47.0", optional = true }
deno_http = { version = "0.54.0", optional = true }
deno_net = { version = "0.52.0", optional = true }
deno_tls = { version = "0.47.0", optional = true }
deno_url = { version = "0.60.0", optional = true }
deno_web = { version = "0.91.0", optional = true }
deno_webgpu = { version = "0.61.0", optional = true }
deno_webidl = { version = "0.60.0", optional = true }
deno_websocket = { version = "0.65.0", optional = true }
deno_webstorage = { version = "0.55.0", optional = true }
glob = { version = "0.3.0", optional = true }
zstd = "0.11.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
winapi = "0.3.9"

[features]
build = ["deno_broadcast_channel", "deno_console", "deno_crypto", "deno_fetch", "deno_http", "deno_net", "deno_tls", "deno_url", "deno_web", "deno_webidl", "deno_websocket", "deno_webstorage", "glob"]
build_ffi = ["deno_ffi"]
build_webgpu = ["deno_webgpu"]
