[package]
name = "deno-transpiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_ast = { version = "0.14", features = ["minifier", "module_specifier", "transpiling"] }
deno_core = { version = "0.129" }

[dev-dependencies]
regex = "1"
