[package]
name = "deno-transpiler"
version = "0.3.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/deno-transpiler"
repository = "https://github.com/tyrchen/deno-utils"
homepage = "https://github.com/tyrchen/deno-utils"
description = """
A typescript transpiler using deno core and deno ast.
"""
readme = "README.md"
keywords = ["typescript", "transpiler", "deno", "v8"]
categories = ["development-tools::build-utils"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_ast = { version = "0.15.0", features = ["minifier", "module_specifier", "transpiling"] }
deno_core = "0.135.0"

[dev-dependencies]
regex = "1.5.6"
