[package]
name = "deno-utils"
version = "0.6.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/deno-utils"
repository = "https://github.com/tyrchen/deno-utils"
homepage = "https://github.com/tyrchen/deno-utils"
description = """
Utility functions for deno.
"""
readme = "README.md"
keywords = ["loader", "deno", "v8"]
categories = ["development-tools"]

[features]
transpile = ["deno-transpiler"]
bundle = ["deno_graph"]

[dependencies]
async-trait = "0.1.56"
data-url = "0.1.1"
deno_core = "0.137.0"
deno_graph = { version = "0.27.0", optional = true }
dirs = "4.0.0"
futures = "0.3.21"
mime = "0.3.16"
phf = { version = "0.10.1", features = ["macros"] }
pin-project = "1.0.10"
reqwest = "0.11.10"
tokio = { version = "1.19.0", features = ["rt", "rt-multi-thread", "fs"] }

deno-transpiler = { version = "0.3.2", path = "../transpiler", optional = true }

[dev-dependencies]
tokio = { version = "1.19.0", features = ["rt", "macros"] }
