[package]
name = "deno-utils"
version = "0.7.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/deno-utils"
repository = "https://github.com/tyrchen/deno-utils"
homepage = "https://github.com/tyrchen/deno-utils"
description = """
Utility functions for deno.
"""
readme = "README.md"
keywords = ["loader", "deno", "v8"]
categories = ["development-tools"]

[features]
transpile = ["deno-transpiler"]
bundle = ["deno_graph"]

[dependencies]
async-trait = "0.1.57"
data-url = "0.1.1"
deno_core = "0.147.0"
deno_graph = { version = "0.30.0", optional = true }
dirs = "4.0.0"
futures = "0.3.23"
mime = "0.3.16"
phf = { version = "0.11.1", features = ["macros"] }
pin-project = "1.0.12"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli"] }
tokio = { version = "1.20.1", features = ["rt", "rt-multi-thread", "fs", "sync"] }

deno-transpiler = { version = "0.4.0", path = "../transpiler", optional = true }

[dev-dependencies]
tokio = { version = "1.20.1", features = ["rt", "macros"] }
